--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-typescript": "^6.0.0",
-    "@types/node": "^14.14.2",
+    "@types/codemirror": "^0.0.108",
+    "@types/node": "^22.9.3",
+    "electron": "^33.2.0",
     "obsidian": "^0.15.9",
     "prettier": "2.1.2",
     "rollup": "^2.32.1",
     "standard-version": "^9.0.0",
     "tslib": "^2.0.3",
-    "typescript": "^4.0.3"
+    "typescript": "^5.7.2"
   },
   "dependencies": {
-    "electron": "^10.1.5",
     "supports-color": "^7.2.0"
   }
 }
